Class over riding in deployment.

--- a/findly-builder/src/app/components/structured-data/structured-data.component.html
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.html
@@ -94,7 +94,7 @@
                     <ng-container *ngIf="noItems && !emptySearchResults">
                         <span class="col-12 no-data">{{'structuredData.no_structuer_data' | translate}}</span>
                         <span class="col-12">{{'structuredData.help_text' | translate}}</span>
-                        <div class="kr-sg-dropdowns w-auto add_data empty offset-5 mt-1" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+                        <div class="kr-sg-dropdowns w-auto add_data offset-5 mt-1" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" id="btn_empty_toggle_add_file_structured_data" ngbDropdownToggle>{{'structuredData.addData' | translate}}</button>                                            
                                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
