--- a/findly-builder/src/app/components/dashboard/dashboard.component.scss
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.scss
@@ -98,6 +98,27 @@
                             font-weight: bold;
                             font-size: 25px;
                             padding: 11px 0;
+                            .ctr{
+                                color: #9AA0A6;
+                                font-weight: normal;
+                                font-size: 14px;
+                                line-height: 17px;
+                                padding-left: 30px;
+                                display: inline-block;
+                                position: relative;
+                                &::before{
+                                    content: "";
+                                    position: absolute;
+                                    width: 1px;
+                                    height: 100%;
+                                    background: #9AA0A6;
+                                    top: 0;
+                                    left: 15px;
+                                }
+                                .ctr-count{
+                                    font-weight: 600;
+                                }
+                            }
                         }
                         .data-percentage{
                             display: flex;
