Index config updates

--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="empty-description">
-        <p>Few steps away from launching your first Findly.ai app</p>
+        <p>Few steps away from launching your first SearchAssist.ai app</p>
         <div class="btnContainer">
           <button [disabled]="saveInProgress" (click)="openCreateApp()" class="kr-sg-button-primary btn_md"><i *ngIf="saveInProgress" class="fa fa-spinner fa-spin"></i>{{saveInProgress? 'Creating App' :'Get Started'}}</button>
           <button class="seeHowBtn d-none">See how</button>
