--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -81,6 +81,8 @@
                           <li  (click)="selectFieldType('dense_vector')"><a>Dense Vector</a></li>
                           <li  (click)="selectFieldType('entity')"><a>Entity</a></li>
                           <li  (click)="selectFieldType('keyword')"><a>Keyword</a></li>
+                          <li  (click)="selectFieldType('array')"><a>Array</a></li>
+                          <li  (click)="selectFieldType('object')"><a>Object</a></li>
                         </ul>
                     </div>
                 </div>
