--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -2019,3 +2019,8 @@ nouislider{
         }
     }
 }
+.mat-form-field-appearance-fill {
+    .mat-form-field-flex{
+        padding: 0 !important;
+    }
+}
