--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -99,7 +99,7 @@
 <kr-modal modalType="default" #customRecurrence>
     <div class="status-modal-popup custom-ref">
       <div class="modal_content">
-        <div class="modal-header">Custom Reccurence <img src="assets/images/close.svg" (click)="closeCustomRecModal()"></div>
+        <div class="modal-header">Custom Reccurence <img src="assets/images/close.svg" (click)="cancelCustomRecModal()"></div>
         <div class="modal-body" >
           <div class="cust-ref">
             <span>Repeat Every</span>
@@ -125,7 +125,7 @@
             <div>
               <span>On</span>
             </div>
-            <div class="" *ngIf = "custFreq == 'Weeks' || custFreq == 'Week'"> 
+            <div class="" *ngIf = "custFreq == 'Weeks' || custFreq == 'Week' ||  custFreq == 'weeks'"> 
               <div class="circle cs" [ngClass] = "{'active' : weeKDay == 'SUN'}" (click)="custweeKday('SUN')">S</div>
               <div class="circle cm" [ngClass] = "{'active' : weeKDay == 'MON'}" (click)="custweeKday('MON')">M</div>
               <div class="circle ct" [ngClass] = "{'active' : weeKDay == 'TUE'}" (click)="custweeKday('TUE')">T</div>
@@ -134,10 +134,10 @@
               <div class="circle cf" [ngClass] = "{'active' : weeKDay == 'FRI'}" (click)="custweeKday('FRI')">F</div>
               <div class="circle csa" [ngClass] = "{'active' : weeKDay == 'SAT'}" (click)="custweeKday('SAT')">S</div>
             </div>
-            <div class="custom-repeat-on" *ngIf = "custFreq != 'Weeks' && custFreq != 'Week'"> 
-               <ng-container *ngIf = "custFreq == 'Days' || custFreq == 'Day'">Repeat Every {{repeatEvery}} {{custFreq}} from {{month}} {{date}} {{year}} </ng-container> 
-               <ng-container *ngIf = "custFreq == 'Months' || custFreq == 'Month'">Repeat Every {{repeatEvery}} {{custFreq}} On {{dateOrdinal}}</ng-container>
-               <ng-container *ngIf = "custFreq == 'Years' || custFreq == 'Year'">Repeat Every {{repeatEvery}} {{custFreq}} from {{month}} {{dateOrdinal}}  </ng-container>
+            <div class="custom-repeat-on" *ngIf = "custFreq != 'Weeks' && custFreq != 'Week' &&  custFreq != 'weeks'"> 
+               <ng-container *ngIf = "custFreq == 'Days' || custFreq == 'Day' ||  custFreq == 'days'">Repeat Every {{repeatEvery}} {{custFreq}} from {{month}} {{date}} {{year}} </ng-container> 
+               <ng-container *ngIf = "custFreq == 'Months' || custFreq == 'Month' ||  custFreq == 'months'">Repeat Every {{repeatEvery}} {{custFreq}} On {{dateOrdinal}}</ng-container>
+               <ng-container *ngIf = "custFreq == 'Years' || custFreq == 'Year' ||  custFreq == 'years'">Repeat Every {{repeatEvery}} {{custFreq}} from {{month}} {{dateOrdinal}}  </ng-container>
             </div>
           </div>
           <div class="ends">
@@ -145,10 +145,10 @@
               <span>Ends</span>
             </div>
             <div class="ends-never row">
-              <input type="radio" name="radio" value ="endsNever" class="ends-radio" (click)="endsFreq('never')"> <span class="sp sp-n">Never</span>
+              <input type="radio" name="radio" value ="endsNever" class="ends-radio" [checked] = "endsOnSelected == 'never'" (click)="endsFreq('never')"> <span class="sp sp-n">Never</span>
             </div>
             <div class="ends-never sp-on row">
-              <input type="radio" name="radio" value ="endsOn" class="ends-radio" (click)="endsFreq('on')"> <span class="sp">On</span>
+              <input type="radio" name="radio" value ="endsOn" class="ends-radio" [checked] = "endsOnSelected == 'on'" (click)="endsFreq('on')"> <span class="sp">On</span>
               <div class="">       
                 <input matInput [matDatepicker]="dpCust" [min]="minDate"  class="input-text date-pick" placeholder="Select Date" [(ngModel)] = "endDate" (dateInput)="addEvent('input', $event,'custom')" (dateChange)="addEvent('change', $event , 'custom')" autocomplete="off" [disabled] = "!endsOn" >
                 <mat-datepicker-toggle matSuffix [for]="dpCust"></mat-datepicker-toggle>
@@ -156,7 +156,7 @@
               </div>
             </div>
             <div class="ends-never sp-at row ">
-              <input type="radio" name="radio"  value ="endsAt" class="ends-radio" (click)="endsFreq('after')"> <span class="sp">At</span>
+              <input type="radio" name="radio"  value ="endsAt" class="ends-radio" [checked] = "endsOnSelected == 'after'" (click)="endsFreq('after')"> <span class="sp">At</span>
               <input id="occurenceId" type="number" min="0" max="30" class="input-text date-pick" placeholder="0" [(ngModel)] = "occurence" [disabled] = "!endsAt"> <span class="occur-span">Occurences</span>
             </div>
           </div>
