--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -7,8 +7,8 @@
     <div class="header-sec-stopwords">
         <div class="title">{{'weights.Weights'| translate}}</div>
         <div class="restore_text" *ngIf="weights.length">
-            <span class="lable_text"  (click)="openAddNewWeight()"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >{{'weights.add_searchable_field'| translate}}</span>
-            <span class="lable_text" (click)="restoreWeights();"><img src="assets/icons/return_black.svg">{{'weights.reset_to_default' | translate}}</span>
+            <span class="lable_text" id="btn_openWeight"  (click)="openAddNewWeight()"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >{{'weights.add_searchable_field'| translate}}</span>
+            <span class="lable_text" id="btn_restoreWeight"  (click)="restoreWeights();"><img src="assets/icons/return_black.svg">{{'weights.reset_to_default' | translate}}</span>
             <span class="clock_img d-none"><img src="assets/icons/clock.svg"></span> 
 
         </div>                   
@@ -43,12 +43,12 @@
                         </div>    
                         <div class="sliderVal">{{weightModal.sliderObj.default}}</div>                                            
                         <div class="action_links"  *ngIf="weightModal.isField  && (currentEditIndex !== i)">
-                            <span class="actions-links pr-4" (click)="editWeight(weightModal,i)"><img class="action_icon" [container]="'body'" ngbTooltip='Edit' src="assets/images/edit-pencil.svg"></span>
-                            <span class="actions-links" ngbTooltip='Delete' [container]="'body'" (click)="deleteWeight(weightModal,$event,i)"><img class="action_icon" src="assets/icons/trashIcon.svg"></span>
+                            <span class="actions-links pr-4" id="btn_editWeight" (click)="editWeight(weightModal,i)"><img class="action_icon" [container]="'body'" ngbTooltip='Edit' src="assets/images/edit-pencil.svg"></span>
+                            <span class="actions-links" id="btn_deleteWeight" ngbTooltip='Delete' [container]="'body'" (click)="deleteWeight(weightModal,$event,i)"><img class="action_icon" src="assets/icons/trashIcon.svg"></span>
                         </div>
                         <div class="action_links editBlock"  *ngIf="currentEditIndex === i">
-                            <span class="actions-links pr-1" (click)="weightModal.desc = currentEditDesc;currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-Close-withBorder.svg"></span>
-                            <span class="actions-links" (click)="currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-tick-withBorder.svg"></span>
+                            <span class="actions-links pr-1" id="btn_confirmWeightEdit" (click)="weightModal.desc = currentEditDesc;currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-Close-withBorder.svg"></span>
+                            <span class="actions-links" id="btn_cancelWeightEdit" (click)="currentEditIndex = -1"><img class="action_icon" src="assets/images/Gray-tick-withBorder.svg"></span>
                         </div>
                     </div>
                 </div>
@@ -57,8 +57,8 @@
                 <!-- <div class="add_btn_sec">
                 </div> -->
                 <div class="cancel_save_sec mr-5">
-                    <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-secondary btn_lg" [disabled]="disableCancle" (click)="setDataToActual()">{{'weights.cancel'| translate}}</button>
-                    <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-primary btn_lg" (click)="addOrUpddate(weights,null,'edit')">{{'weights.save_weights' | translate}}</button>
+                    <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-secondary btn_lg"  id="btn_discardWeightChanges" [disabled]="disableCancle" (click)="setDataToActual()">{{'weights.cancel'| translate}}</button>
+                    <button [ngClass]="{'d-none':!weights.length}" class="kr-sg-button-primary btn_lg" id="btn_confirmWeightChanges" (click)="addOrUpddate(weights,null,'edit')">{{'weights.save_weights' | translate}}</button>
                 </div>               
             </div>
         </section>                               
@@ -69,7 +69,7 @@
 <kr-modal modalType="center" modalClass="addWeightModalComponent modal_popups_"  #addDditWeightPop>   
     <div class="modal-header">
         <div class="title">{{currentEditIndex>-1?'Edit':'Add'}} Weight</div>
-        <div class="close_icon"><img (click)="closeAddEditWeight()" src="assets/icons/modal-close.svg"></div>
+        <div class="close_icon"><img id="btn_closeWeightModal" (click)="closeAddEditWeight()" src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body textAlignLeft" *ngIf="addEditWeighObj">
@@ -81,7 +81,7 @@
                         <input type="text" placeholder="Search For Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditWeighObj.fieldName)" [(ngModel)]="addEditWeighObj.fieldName">
                         <img src="assets/images/search_gray.svg" class="search-icon">                                                         
                         <ul class="dropdown-menu content-menu">
-                            <li *ngFor="let suggesition of fields" (click)="selectedField(suggesition)"><a>{{suggesition.fieldName}}</a></li>
+                            <li *ngFor="let suggesition of fields" id="btn_selectWeightsField" (click)="selectedField(suggesition)"><a>{{suggesition.fieldName}}</a></li>
                         </ul>
                     </div>                        
                 </div>
@@ -89,11 +89,11 @@
         </div> 
         <div class="kr-sg-input-text mb-25" *ngIf="addEditWeighObj._id" [ngClass]="{'disabled': addEditWeighObj._id}">
             <div class="label-text">{{'weights.weight_name'| translate}}</div>
-            <input type="text" [(ngModel)]="addEditWeighObj.name" placeholder="Placeholder text" class="input-text">
+            <input type="text" id="input_weightsName" [(ngModel)]="addEditWeighObj.name" placeholder="Placeholder text" class="input-text">
         </div>
         <div class="kr-sg-input-text-area mb-25">
             <div class="label-text">{{'weights.description'| translate}}</div>
-            <textarea [(ngModel)]="addEditWeighObj.desc" placeholder="Short Description" class="input-text"></textarea>
+            <textarea id="input_weightsDesc" [(ngModel)]="addEditWeighObj.desc" placeholder="Short Description" class="input-text"></textarea>
         </div>
         <div class="kr-sg-input-text">
             <div class="label-text">{{'weights.set_weight'| translate}}</div>
@@ -107,8 +107,8 @@
     </div>
     </perfect-scrollbar> 
     <div class="modal-footer text-left" *ngIf="addEditWeighObj">
-        <button type="button" class="kr-sg-button-danger btn_lg float-left" *ngIf="currentEditIndex>-1" (click)="deleteWeight(addEditWeighObj,$event,currentEditIndex)">{{'weights.delete' | translate}}</button>       
-        <button type="button" class="kr-sg-button-primary btn_lg mr-0 float-right" (click)="addEditWeight()" [disabled]="!addEditWeighObj.name">{{(currentEditIndex>-1)?'Update':'Add to List'}}</button>        
-        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeAddEditWeight()">{{'weights.cancel'| translate}}</button>
+        <button id="btn_weightsSave" type="button" class="kr-sg-button-danger btn_lg float-left" *ngIf="currentEditIndex>-1" (click)="deleteWeight(addEditWeighObj,$event,currentEditIndex)">{{'weights.delete' | translate}}</button>       
+        <button id="btn_weightseditSave" type="button" class="kr-sg-button-primary btn_lg mr-0 float-right" (click)="addEditWeight()" [disabled]="!addEditWeighObj.name">{{(currentEditIndex>-1)?'Update':'Add to List'}}</button>        
+        <button id="btn_weightsClose" type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeAddEditWeight()">{{'weights.cancel'| translate}}</button>
     </div>    
 </kr-modal>
