UI changes in Experiments

--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -162,6 +162,9 @@
                   &:first-child {
                     margin: 0;
                   }
+                  &.status{
+                    margin-left: -4px;
+                  }
                 }
                 &.left {
                   padding-right: 30px;  
