--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -397,3 +397,17 @@
         }
     }
 }
+
+.ng5-slider-class {
+    top: 16px !important;
+    font-weight: bold !important;
+    font-size: 12px !important;
+    color: #202124 !important;
+}
+.ng5-slider.ng5-slider-bubble{
+    cursor: default;
+    padding: 1px 3px;
+    font-weight: bold !important;
+    font-size: 12px !important;
+    color: #202124 !important;
+}
