--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -227,11 +227,14 @@
               }
             }
             .date-stamp {
-              color: #9AA0A6;
+              color: #5F6368;
               font-weight: normal;
               font-size: 10px;
               line-height: 12px;
               margin-bottom: 4px;
+              .s-color{               
+                color: #9AA0A6;
+              }
             }
             .hours {
               color: #202124;
@@ -270,9 +273,24 @@
                 // align-items: center;
                 flex-direction: column;
                 justify-content: center;
+                position: relative;
+                width: 170px;
+                &::before{
+                  content: "";
+                  position: absolute;
+                  background: #E4E5E7;
+                  height: 34px;
+                  width: 1px;
+                  right: 12px;
+                }
+                &.before-none{
+                  &::before{
+                    display: none;
+                  }
+                }
               }
               .right-sec {
-                border-left: 1px solid #e4e5e7;
+                // border-left: 1px solid #e4e5e7;
                 padding-left: 10px;
                 position: relative;
                 // &::before{
@@ -280,7 +298,7 @@
                 //     position: absolute;
                 //     left: 0;
                 //     background: #E4E5E7;
-                //     height: 100%;
+                //     height: 34px;
                 //     width: 1px;
                 // }
                 ngb-progressbar {
@@ -299,7 +317,7 @@
                 }
               }
               .date-stamp{
-                color: #9AA0A6;
+                color: #5F6368;
                 font-weight: normal;
                 font-size: 12px;
                 line-height: 15px;                
@@ -310,13 +328,7 @@
               .hour{
                 width: 125px;
                 display: inline-block;                
-              }
-              .hours{
-                color: #0D6EFD;
-                font-weight: normal;
-                font-size: 12px;
-                line-height: 15px;
-              }
+              }              
               .inline-block{
                 line-height: 0;
               }
