--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -492,7 +492,7 @@
                         <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{crwalOptionLabel}}</button>                                            
                         <ul class="dropdown-menu content-menu">
                           <li (click)="crawlOption('any','Crawl Everything')"><a>Crawl Everything</a></li>                                              
-                          <li (click)="crawlOption('block','Crawl Everything Except Specific URls')"><a>Crawl Everything Except Specific URls</a></li>
+                          <li (click)="crawlOption('block','Crawl Everything Except Specific URLs')"><a>Crawl Everything Except Specific URLs</a></li>
                           <li (click)="crawlOption('allow','Crawl Only Specific URLs')"><a >Crawl Only Specific URLs</a></li>
                         </ul>
                       </div>
@@ -801,8 +801,8 @@
                           {{page._source.url || selectedSource.url}}</div>
                         <div class="col-2 date pr-0">{{page.createdOn | dateFormatPipe: 'DD-MMM-YYYY'}}</div>
                         <div class="col-2 actions p-0">
-                          <img src="assets/icons/refresh-table.svg" ngbTooltip='recrwal' (click)="reCrwalingWeb('pages',page ,$event)">
-                          <img src="assets/icons/sidemenu/table-refresh.svg" ngbTooltip='Refresh'>
+                          <img src="assets/icons/refresh-table.svg" ngbTooltip='recrawl' (click)="reCrwalingWeb('pages',page ,$event)" placement="left">
+                          <img src="assets/icons/sidemenu/table-refresh.svg" ngbTooltip='Refresh' placement="left">
                           <img src="assets/icons/sidemenu/delete-table.svg" (click)="deletePages('pages',page ,$event)"
                             ngbTooltip='Delete' placement="left">
                         </div>
