--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -125,7 +125,7 @@
                                     <div class="col-4 p-0 actions-sec">
                                         <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
                                             <div class="dropdown dropdown-open">                                        
-                                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img class="cursor" src="assets/icons/play.svg"></button>                                            
+                                                <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img class="cursor" (click) = "launch()" src="assets/icons/play.svg"></button>                                            
                                                 <ul class="dropdown-menu content-menu comments_header_dropdown_content d-none" ngbDropdownMenu>
                                                     
                                                 </ul>
