--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -44,14 +44,14 @@
 				</span>
 				<span class="linkTitle">Actions</span>
 			</div>
-			<div mat-button class="mat-button" [routerLink]="['/structuredData']" skipLocationChange
+			<!-- <div mat-button class="mat-button" [routerLink]="['/structuredData']" skipLocationChange
 				routerLinkActive="active" (click)="preview('Structured Data')" mat-button>
 				<span class="inlineIconBox">
 					<img src="assets/icons/sidemenu/structured_data.svg" class="defaultIcon">
 					<img src="assets/icons/sidemenu/structured_data.svg" class="activeIcon">
 				</span>
 				<span class="linkTitle">{{'structuredData.structured_data' | translate}}</span>
-			</div>
+			</div> -->
 
 			<!-- <button mat-button>
 			<span class="inlineIconBox leftAdjust">
