updated search interface UI template styles

--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -1719,6 +1719,7 @@ and open the template in the editor.
         position: absolute;          
         cursor: pointer;
         margin: 0;
+        height: auto;
         + .radio-custom-label{
             display: inline-block;
             vertical-align: middle;
